# diffusion_language_model

./: colab.ipynb  main.py  pyproject.toml
configs/: colab.yaml  default.yaml
logs/: metrics.csv
src/: dataset.py  model.py  noise_schedule.py  plot.py  sample.py  train.py
